--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<title>Falk-Kline</title>
 		<base href="/">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta content="width=device-width, initial-scale=1" name="viewport">
 		<!-- license - https://fontawesome.com/license -->
-		<link rel="icon" type="image/svg" href="assets/images/heart-solid.svg">
+		<link href="assets/images/heart-solid.svg" rel="icon" type="image/svg">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
